# stdb

./: .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: production-entrypoint.sh  pyproject.toml
backend/apischema/: schema.py
backend/apps/core/: admin.py  schema.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/vampire/: apps.py
backend/apps/vampire/migrations/: 0001_initial.py
backend/apps/vampire/models/: __init__.py  common.py  models_v5.py
backend/config/: settings.py  urls.py
backend/config/settings/: __init__.py  base.py  local.py  production.py
backend/src/: admin.py  models.py
backend/src/apischema/: middleware.py  schema.py
backend/src/migrations/: 0001_initial.py  0002_chronicle_owner_chronicleplayers_chronicle_players.py
backend/src/modules/apps/core/: admin.py  models.py
backend/src/modules/apps/core/forms/: __init__.py  characterForm.py
backend/src/modules/apps/core/schema/: query.py  types.py
backend/src/modules/apps/core/schema/mutations/: __init__.py  createCharacterMutation.py
backend/src/modules/apps/users/: models.py
backend/src/modules/apps/vampire/models/: models_v5.py
backend/src/modules/apps/vampire/schema/: types.py
backend/src/modules/utils/: hashids.py  schema.py
backend/src/modules/utils/models/: __init__.py  timestamps.py
backend/src/modules/utils/schema/: mutations.py  scalars.py
docker/: Dockerfile-backend  Dockerfile-webapp
nginx/: nginx.conf
webapp/: nuxt.config.ts  package.json  tailwind.config.js
webapp/layouts/: dashboard.vue  default.vue
(+36 files in other folders)
