[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for my roleplaying DB"
authors = ["Jacob Ràfols <ovnijacob@gmail.com>"]
license = "Ask Me later, I don't know yet"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
